--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,13 @@ services:
     restart: unless-stopped  # 容器退出时自动重启（除非手动停止）
     environment:
       - TZ=Asia/Shanghai  # 配置时区，确保定时任务时间准确
+      # 服务配置（可根据需要修改）
+      - WEBHOOK_URL=https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=58024cb2-a88f-4d70-84cd-7690ead0ead8
+      - CITY=上海市-上海
+      - LATITUDE=31.2304
+      - LONGITUDE=121.4737
+      - SCHEDULE_HOUR=17
+      - SCHEDULE_MINUTE=15
+      - USE_SUNSET_TIME=true  # 设置为 true 启用日落时间自动触发
+      - SUNSET_ADVANCE_MINUTES=30  # 日落前提前多少分钟推送（仅在 USE_SUNSET_TIME=true 时生效）
+      - PORT=8080
